# ros_geomagic

./: .gitignore  CMakeLists.txt  README.md  long_tip_pose.py  mainpage.dox  manifest.xml  omni.launch  package.xml  potential_well.py  pr2_master.py  push_away.py  rosdep.yaml  sinusoid.py
cfg/: omni.rviz
geomagic_control/: CMakeLists.txt  README.md  geomagic1_2016-11-29-21-49-47.bag  package.xml
geomagic_control/cfg/: geomagic.rviz  omni.rviz
geomagic_control/launch/: geomagic.launch  geomagic_headless.launch
geomagic_control/msg/: OmniFeedback.msg
geomagic_control/scripts/: lockDoF.py
geomagic_control/src/: device_node.cpp  omni.cpp
geomagic_description/: CMakeLists.txt  README.txt  package.xml
geomagic_description/urdf/: geomagic.robot.xml  geomagic.urdf
launch/: omni.launch  omni_headless.launch
src/: omni.cpp
